v0.0.1-038 - fix: UUID em geradores, removegenerator, exemplo de arena, revisao save/load, deprecation warnings